--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html>
+ <link rel="stylesheet" href="https://morgankotter.github.io/css/main.css">
+	
+	
 	<head>
 		<title>Hank Quinlan, Horrible Cop</title>
 	</head>
