--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Hank Quinlan, Horrible Cop</title>
+		<title>Morgan Kotter</title>
 		<!-- link to main stylesheet -->
 		<link rel="stylesheet" type="text/css" href="/css/main.css">
 	</head>
@@ -16,13 +16,13 @@
 		</nav>
 		<div class="container">
     		<div class="blurb">
-        		<h1>Hi there, I'm Hank Quinlan!</h1>
-				<p>I'm best known as the horrible cop from <em>A Touch of Evil</em> Don't trust me. <a href="/about">Read more about my life...</a></p>
+        		<h1>Welcome to Morgan's Github.io page!</h1>
+				<p>Designed for Lucidpress University <a href="/about">Read more about my life...</a></p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
     		<ul>
-        		<li><a href="mailto:morganxc15@gmail.com">email</a></li>
+        		<li><a href="mailto:mkotter@lucidchart.com">email</a></li>
         		<li><a href="https://github.com/morgankotter">github.com/morgankotter</a></li>
 			</ul>
 		</footer>
